<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input"
        app:layout_constraintVertical_bias="0.95"
        tools:layout_editor_absoluteX="1dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/backspace"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#E18B0D"
                android:onClick="backspaceBTN"
                android:text="@string/backspace"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/clear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#BD1D11"
                android:onClick="clearBTN"
                android:text="@string/clear"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bracketStart"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="bracketStartBTN"
                android:text="@string/bracketStart"
                android:textColor="#4CAF50"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bracketEnd"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="bracketEndBTN"
                android:text="@string/bracketEnd"
                android:textColor="#4CAF50"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/exp"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="expBTN"
                android:text="@string/exp"
                android:textColor="#4CAF50"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sevenBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="sevenBTN"
                android:text="@string/seven"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/eightBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="eightBTN"
                android:text="@string/eight"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/nineBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="nineBTN"
                android:text="@string/nine"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/divide"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="divideBTN"
                android:text="@string/divide"
                android:textColor="#4CAF50"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/modulus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="modulusBTN"
                android:text="@string/modulus"
                android:textColor="#4CAF50"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fourBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="fourBTN"
                android:text="@string/four"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fiveBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="fiveBTN"
                android:text="@string/five"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sixBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="sixBTN"
                android:text="@string/six"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/multiply"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="multiplyBTN"
                android:text="@string/multiply"
                android:textColor="#4CAF50"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sqrRoot"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="sqrRootBTN"
                android:text="@string/sqrRoot"
                android:textColor="#4CAF50"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/oneBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="oneBTN"
                android:text="@string/one"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/twoBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="twoBTN"
                android:text="@string/two"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/threeBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="threeBTN"
                android:text="@string/three"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/subtract"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="minusBTN"
                android:text="@string/subtract"
                android:textColor="#4CAF50"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="addBTN"
                android:text="@string/add"
                android:textColor="#4CAF50"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/plusMinus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="plusMinusBTN"
                android:text="@string/plusMinus"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/zeroBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="zeroBTN"
                android:text="@string/zero"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/point"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="decimalBTN"
                android:text="@string/point"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/equalsBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:background="@drawable/circle"
                android:backgroundTint="#19811E"
                android:onClick="equalsBTN"
                android:text="@string/equals"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="false"
        android:hint="Enter in a value"
        android:inputType="none"
        android:textAlignment="textEnd"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />
</androidx.constraintlayout.widget.ConstraintLayout>